[metadata]
name = streamtotext
author = Gregory Haynes
author-email = greg@greghaynes.net
summary = Stream audio to speech to text backends
description-file = README.rst
home-page = https://github.com/ibm-dev/streamtotext
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    streamtotext

[entry_points]
console_scripts =
    streamtotext = streamtotext.cli.util:main
    streamtotext-transcribe-mic = streamtotext.cli.mic_transcribe:main
